# macrogauge

./: .gitignore  AGENTS.md  CALCULATION_AUDIT.md  CLAUDE.md  README.md  pyproject.toml  todo.md
config/: basket.json  capacity.json  composites.json  dc_basket.json  dc_context.json  dc_power.json  outlook.json  release_calendar.json  series.json
docs/: macrogauge-design.md  pjm-dataminer2-key.md
pipeline/: basket.py  capacity.py  collect.py  dates.py  dc_basket.py  dc_context.py  dc_power.py  models.py  registry.py  release_calendar.py  run_daily.py
schemas/: accountability.schema.json  backtest.schema.json  capacity.schema.json  commodities.schema.json  compare.schema.json  datacenter.schema.json  fuel.schema.json  gaptable.schema.json  gauge_daily.schema.json  geo.schema.json  grocery_basket.schema.json  heatcheck.schema.json  labor.schema.json  matrix.schema.json  methodology.schema.json  metros.schema.json  nextprint.schema.json  nowcast_latest.schema.json  official.schema.json  outlook.schema.json  pulse.schema.json  pulse_lite.schema.json  qa.schema.json  quilt.schema.json  real_wages.schema.json  recession.schema.json  releases.schema.json  replay.schema.json  sources_status.schema.json  stress.schema.json
scripts/: backfill_alfred.py  backfill_fmp.py  backfill_manheim.py  backfill_power.py  backtest_power_yearratio.py  drill_scrapes.py  port_neocloud_config.py
site/: package-lock.json  package.json  playwright.config.ts
tests/: test_aaa.py  test_accountability.py  test_aggregate.py  test_aptlist.py  test_backfill.py  test_backfill_alfred_script.py  (+70 more)
(+387 files in other folders)
