[project]
name = "macrogauge"
version = "0.1.0"
description = "Daily US inflation/macro gauge pipeline + static site"
requires-python = ">=3.12"
dependencies = ["requests>=2.32", "jsonschema>=4.23", "openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # partial-tolerance tests intentionally trigger these; pytest.warns
    # assertions still see them (filters don't affect warns() capture)
    "ignore::pipeline.connectors.util.PartialFetchWarning",
]
